--- a/Atristry-Frontend/public/index.html
+++ b/Atristry-Frontend/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<title>Artist-Connect</title>
+		<title>ArtistryLink</title>
 		<link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
 	</head>
 	<body>
